# rcam

./: README.md  pyproject.toml  rcam.spec
.github/workflows/: python-tests.yml
src/: __init__.py  events.py  fastapi_http_server.py  gui.py  imaging_source_recorder.py  recorder.py  video_recording_fileset.py  video_recordings_db.py
src/imaging_source_recorder/: config.py  events.py  fastapi_http_server.py  imaging_source_recorder.py  video_recorder_interface.py  video_recording_fileset.py  video_recordings_db.py
src/rcam/: __init__.py  config.py  events.py  fastapi_http_server.py  gui.py  imaging_source_recorder.py  metadata_dialog.py  recording.py  video_recorder_interface.py  video_recording_fileset.py  video_recordings_db.py
test/: test_event_recording.py  test_fastapi_http_server.py
