[project]
name = "RCam"
version = "0.3.0-dev"
description = "Desktop application for remote controllable video recordings using industrial high-speed cameras"
authors = [
      {name = "Joscha Schmiedt", email = "schmiedt@brain.uni-bremen.de"},
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.11",
    'imagingcontrol4>=1.2.0',
    'imagingcontrol4pyside6',
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.uv]
package = true

[project.scripts]
rcam = "gui:main_gui"
